<resources>
    <string name="app_name">GoogleDirectionsApiTest</string>
    <string name="action_settings">Settings</string>
    <string name="route1_simulate">Simulate Route 1</string>
    <string name="route2_simulate">Simulate Route 2</string>
    <string name="route3_simulate">Simulate Route 3</string>
        <string name="intro_message">
        <![CDATA[


            This sample uses the Google Places Geo Data API for Android to provide autocomplete suggestions.
            It shows how to use a custom Adapter to display suggestions in an AutocompleteTextView.
            Once selected, details about a place are retrieved based on its Place id from the
            Places Geo Data API.


        ]]>
    </string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="src_autocomplete_hint">Enter Source place name or address</string>
    <string name="dest_autocomplete_hint">Enter Destination place name or address</string>
    <string name="find_nearby_drivers">Find Nearby Drivers</string>

    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>
    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>

    <string name="btn_skip_intro">Skip Intro</string>
    <string name="Skip_Intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YoutubePlayer</string>

    <string-array name="menus">
        <item>Home</item>
        <item>Simulation</item>
    </string-array>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="simulation_1">Simulation 1</string>
    <string name="simulation_2">Simulation 2</string>
    <string name="simulation_3">Simulation 3</string>
    <string name="simulation1_route">Simulation 1 Route</string>
    <string name="simulation2_route">Simulation 2 Route</string>
    <string name="about">About</string>
    <string name="eta_label">"ETA : "</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="waypoints_array">
        <item>Nothing Selected</item>
        <item>WayPoint 1</item>
        <item>WayPoint 2</item>
    </string-array>

    <!-- Introduction Strings -->
    <string name="login_register">Login/Register</string>
    <string name="login_register_msg">Login using your credentials</string>
    <string name="search_nearby_drivers">Search Nearby Drivers</string>
    <string name="search_nearby_drivers_msg">Find dirvers fitting your criteria such as school timing, location.</string>
    <string name="select_driver">Select Driver</string>
    <string name="select_driver_msg">Select best, affordable and safe driver for your kids.</string>
    <string name="start_service">Start Your Service</string>
    <string name="start_service_msg">Enjoy the service. Get real-time location updates, pick-up/drop-off notifications.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
