<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/route1_simulation"
        android:orderInCategory="100"
        android:title="@string/route1_simulate"
        app:showAsAction="never" />
    <item
        android:id="@+id/route2_simulation"
        android:orderInCategory="100"
        android:title="@string/route2_simulate"
        app:showAsAction="never" />
    <item
        android:id="@+id/route3_simulation"
        android:orderInCategory="100"
        android:title="@string/route3_simulate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="Search"
        android:icon="@drawable/ic_find_in_page_black_48dp"
        app:showAsAction="ifRoom"
        ></item>
    <item
        android:id="@+id/action_user"
        android:orderInCategory="300"
        android:title="User"
        android:icon="@drawable/ic_person_pin_black_48dp"
        app:showAsAction="ifRoom"></item>
    </menu>