<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cvora.googledirectionsapitest.directions.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar">
        </include>

        <AutoCompleteTextView
            android:id="@+id/src_autocomplete_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/src_autocomplete_hint"
            android:singleLine="true"/>
        <AutoCompleteTextView
            android:id="@+id/dest_autocomplete_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/dest_autocomplete_hint"
            android:singleLine="true"/>
        <Button
            android:id="@+id/get_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Get Directions"/>
        <Button
            android:id="@+id/load_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Load Sample Route"/>
        <Button
            android:id="@+id/start_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Start Animation"/>
        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/clear_text"/>
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/selected_place"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"/>-->
        <!--<TextView-->
            <!--android:id="@+id/place_details"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:autoLink="all"-->
            <!--android:text=""-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"/>-->
        <!--<TextView-->
            <!--android:id="@+id/place_attribution"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:autoLink="all"-->
            <!--android:text=""-->
            <!--android:paddingTop="@dimen/activity_vertical_margin"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"/>-->

    </LinearLayout>

</ScrollView>
